style: removed height 100 from html, because of it's weird scrolling issue on mobile safari

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -1,11 +1,8 @@
-html, body {
-     height: 100%;
-     overflow: auto;
-}
-
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: auto;
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
   color: #4e4e4e;
